# cuda_test

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
00_deviceinfo/: CMakeLists.txt  deviceinfo.cpp  deviceinfo.h  main.cpp
01_simpletest/: CMakeLists.txt  main.cpp  simpletest.cu  simpletest.h  utils.h
02_sum_reduce/: main.cpp  perf_tuning.csv  reduce.cu  reduce.h  utilsm.cpp  utilsm.h
02_vectorAdd/: CMakeLists.txt  Makefile  conclusion.md  performance.csv  rundebug.sh  vectorAdd.cu  vectorAdd_int.cu
03_conv/: main.cpp
03_mma/: CMakeLists.txt  Makefile  conclusion.md  matrixMultiply.cu  matrixMultiply_bk.cu
04_reduction/: CMakeLists.txt  Makefile  README.md  SharedMem.md  WarpShuffle.md  main.cpp  reduction.cu  reduction.h
05_conv/: CMakeLists.txt  main.cpp
common/: cuda_helper.cpp  cuda_helper.h  utils.h  utilsm.cpp  utilsm.h
gpu_test/: gpu_test.sln
gpu_test/deviceinfo/: deviceinfo.cpp  deviceinfo.h  deviceinfo.vcxproj  main.cpp
gpu_test/deviceinfo/x64/Debug/: reduce.cu.cache  test.ilk  vc142.idb
gpu_test/simpletest/: deviceinfo.cpp  main.cpp  simpletest.cu  simpletest.h  simpletest.vcxproj  sum_reduction.vcxproj
gpu_test/simpletest/x64/Debug/: reduce.cu-1584494171.deps  sum_reduction.exe.recipe  test.exe.recipe  vc142.idb
gpu_test/sum_reduction/: main.cpp  perf_tuning.csv  perf_tuning.xlsx  reduce.cu  reduce.h  sum_reduction.vcxproj  utilsm.cpp  utilsm.h
gpu_test/sum_reduction/x64/Debug/: deviceinfo.exe.recipe  deviceinfo.ilk  sum_reduction.exe.recipe  vc142.idb
gpu_test/template/: main.cpp  template.vcxproj
(+22 files in other folders)
